# rmw

src/: Makefile.am  Makefile.in
src/functions/: purging_rmw.c
src/gnu_coreutils-8.26/: argmatch.c  openat.h  rm.c  rm.h  system.h  xalloc.h
